fix: submenu popup items flickering on sider collapse

--- a/src/components/UI/Layout.css
+++ b/src/components/UI/Layout.css
@@ -14,3 +14,7 @@
     padding: 12px;
   }
 }
+
+body.side-menu_not-collapsed .ant-menu-submenu.ant-menu-submenu-popup {
+  opacity: 0 !important;
+}
